Addressed issue Return Type not converted from interface to object
See : Public Property Get TimeOfDay() As TimeSpan
Expected output  Public Property Get TimeOfDay() As DotNetLib.TimeSpan

Still require to use  qualified name which is causing issue with the variable name.  Return Type requires a structure ProjectName, ParameterName

Potential issue if object is located in an external type library.

--- a/C#/ComRefactorConsoleRDComponents/Output/DateTime.cls
+++ b/C#/ComRefactorConsoleRDComponents/Output/DateTime.cls
@@ -173,11 +173,11 @@ Attribute Ticks.VB_Description = "Gets the number of ticks that represent the da
 End Property
 
 '@Description("Gets the time of day for this instance.")
-Public Property Get TimeOfDay() As ITimeSpan
+Public Property Get TimeOfDay() As TimeSpan
 Attribute TimeOfDay.VB_Description = "Gets the time of day for this instance."
-   Dim pvtITimeSpan As ITimeSpan
-   Set pvtITimeSpan = this.DotNetLibDateTime.TimeOfDay()
-   Set TimeOfDay  = pvtITimeSpan
+   Dim pvtTimeSpan As TimeSpan
+   Set pvtTimeSpan = this.DotNetLibDateTime.TimeOfDay()
+   Set TimeOfDay  = pvtTimeSpan
 End Property
 
 '@Description("Gets the current date.")
@@ -358,7 +358,7 @@ Attribute FromOADate.VB_Description = "Returns a DateTime equivalent to the spec
 End Function
 
 '@Description("Converts the value of this instance to all the string representations supported by the standard date and time format specifiers.")
-Public Function GetDateTimeFormats() As String()
+Public Function GetDateTimeFormats() As String
 Attribute GetDateTimeFormats.VB_Description = "Converts the value of this instance to all the string representations supported by the standard date and time format specifiers."
    GetDateTimeFormats = this.DotNetLibDateTime.GetDateTimeFormats()
 End Function
@@ -454,11 +454,11 @@ Attribute Subtract.VB_Description = "Returns a new DateTime that subtracts the s
 End Function
 
 '@Description("Returns a new TimeSpan that subtracts the specified date and time from the value of this instance.")
-Public Function Subtract2(ByRef value As DateTime) As ITimeSpan
+Public Function Subtract2(ByRef value As DateTime) As TimeSpan
 Attribute Subtract2.VB_Description = "Returns a new TimeSpan that subtracts the specified date and time from the value of this instance."
-   Dim pvtITimeSpan As ITimeSpan
-   Set pvtITimeSpan = this.DotNetLibDateTime.Subtract2(value)
-   Set Subtract2  = pvtITimeSpan
+   Dim pvtTimeSpan As TimeSpan
+   Set pvtTimeSpan = this.DotNetLibDateTime.Subtract2(value)
+   Set Subtract2  = pvtTimeSpan
 End Function
 
 '@Description("Serializes the current DateTime object to a 64-bit binary value that subsequently can be used to recreate the DateTime object.")
@@ -586,10 +586,10 @@ Public Function LessThanOrEqual(ByRef t1 As DateTime, ByRef t2 As DateTime) As B
    LessThanOrEqual = this.DotNetLibDateTime.LessThanOrEqual(t1, t2)
 End Function
 
-Public Function Subtraction(ByRef d1 As DateTime, ByRef d2 As DateTime) As ITimeSpan
-   Dim pvtITimeSpan As ITimeSpan
-   Set pvtITimeSpan = this.DotNetLibDateTime.Subtraction(d1, d2)
-   Set Subtraction  = pvtITimeSpan
+Public Function Subtraction(ByRef d1 As DateTime, ByRef d2 As DateTime) As TimeSpan
+   Dim pvtTimeSpan As TimeSpan
+   Set pvtTimeSpan = this.DotNetLibDateTime.Subtraction(d1, d2)
+   Set Subtraction  = pvtTimeSpan
 End Function
 
 Public Function Subtraction2(ByRef d As DateTime, ByRef t As ITimeSpan) As DateTime
